# research-agent

./: .env.example  README.md  config.py  main.py  pyproject.toml
agent/: research_agent.py
interfaces/: cli.py  telegram_bot.py
llm/: __init__.py  base.py  claude.py  gemini.py
processing/: literature_builder.py  note_builder.py  result_handler.py
search/: base.py  fetcher.py  tavily_handler.py
storage/: git_syncer.py  vault_writer.py
